--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "7a0d5c13-835d-4dbf-89cd-08d6cad9966b"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
